Fixed offcenter buttons

--- a/styles.css
+++ b/styles.css
@@ -145,6 +145,7 @@ footer {
     border-radius: 5px;
 
     border-bottom: 5px solid transparent;
+    border-top: 5px solid transparent;
 
     padding: 5px;
     margin: 5px;
@@ -156,6 +157,7 @@ footer {
     background-color: var(--c-elements-2);
 
     border-bottom: 5px solid var(--c-link-1);
+    border-top: 5px solid transparent;
 
     transform: scale(1.1, 1.1) translateY(-5px);
     
